--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -64,5 +64,5 @@ fr:
       not_found: "n'a pas été trouvé(e)"
       not_locked: "n'était pas verrouillé(e)"
       not_saved:
-        one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
-        other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        one: "Oups ! Il semblerait que vous ayez oublié quelque chose !"
+        other: "Oups ! Il semblerait que vous ayez oublié plusieurs choses !"
