--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -14,6 +14,7 @@ fr:
         street_name: "La rue"
         zip_code: "Le code postal"
         city: "La ville"
+        current_password: "Le mot de passe actuel"
     errors:
       messages:
         record_invalid: 'La validation a échoué : %{errors}'
