added discount to products & updated views

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,5 +1,9 @@
 ---
 fr:
+  status:
+    default: "Défaut"
+    sales: "Soldes"
+    hot: "Tendances"
   activerecord:
     attributes:
       user:
