--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -247,4 +247,5 @@ fr:
       default: "%d %B %Y %Hh %Mmin %Ss"
       long: "%A %d %B %Y %Hh%M"
       short: "%d %b %Hh%M"
+      normal: "%e %B"
     pm: pm
